# ChessGame

./: .gitignore  CMakeLists.txt  ChessGame  QUICK_START.md  README.md  makefile  tuto.txt
assets/: board.c  pieces.c  pieces1.c
include/: board.h  check.h  pieces.h  rules.h
saves/: first.txt
src/: board.c  check.c  main.c  pieces.c  rules.c
